--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
-# DO NOT EDIT.
-# This file lists all contributors to the repository.
+`# This file lists all contributors to the repository.
+
 
 Opeyemi Alabi <alabiopex@gmail.com>
 Ashlame Sunday <mercyashlamesunday@gmail.com>
